--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "build": "webpack --config ./config/webpack.prod.js",
-    "start": "webpack serve --config ./config/webpack.dev.js"
+    "start": "webpack serve --config ./config/webpack.dev.js",
+    "test": "jest"
   },
   "keywords": [
     "url",
@@ -25,10 +26,12 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "babel-core": "^6.26.3",
+    "babel-jest": "^26.6.2",
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.2",
     "portfinder": "^1.0.28",
     "webpack": "^5.3.0",
     "webpack-cli": "^4.1.0",
